@@ -1,6 +1,5 @@
 package saphy.saphy.auth.config;
 
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,7 +7,6 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -16,7 +14,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import saphy.saphy.auth.filter.CustomLogoutFilter;
 import saphy.saphy.auth.filter.JWTFilter;
 import saphy.saphy.auth.filter.LoginFilter;
@@ -39,7 +36,16 @@ public class SecurityConfig {
     private final RefreshRepository refreshRepository;
 
     private static final String[] PUBLIC_URLS = {
-            "/**"
+            "/health",
+            "/oauth2/**",
+            "/login/**",
+            "/members/join",
+            "/reissue",
+//            "/v3/**",
+//            "/swagger-ui/**", // swagger config 만들고 추가
+            "/error",
+            "/",
+            "/**" // 개발 test용 api 모든 접근 허용 코드 추가
     };
 
     @Bean
@@ -52,12 +58,6 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return (web) -> web.ignoring().requestMatchers(
-                "/oauth2/**"
-        );
-    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -65,18 +65,16 @@ public class SecurityConfig {
         // CORS 설정
         http
                 .cors((cors) -> cors
-                        .configurationSource(new CorsConfigurationSource() {
-                            @Override
-                            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                                CorsConfiguration configuration = new CorsConfiguration();
-                                // configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://localhost:3000","https://saphy.site/"));
-                                configuration.setAllowedOrigins(Collections.singletonList("*")); // test용
-                                configuration.setAllowCredentials(true);
-                                configuration.setAllowedHeaders(Collections.singletonList("*"));
-                                configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(List.of("Authorization", "Set-Cookie"));
-                                return configuration;
-                            }
+                        .configurationSource(request -> {
+                            CorsConfiguration configuration = new CorsConfiguration();
+                            configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://localhost:3000",
+                                    "http://3.36.34.122:8080", "https://3.36.34.122", "https://saphy.site/"
+                                    ));
+                            configuration.setAllowCredentials(true);
+                            configuration.setAllowedHeaders(Collections.singletonList("*"));
+                            configuration.setMaxAge(3600L);
+                            configuration.setExposedHeaders(List.of("Authorization", "Set-Cookie"));
+                            return configuration;
                         }));
 
         http
@@ -96,15 +94,14 @@ public class SecurityConfig {
 
         // JWT, 로그인, 로그아웃 커스텀 필터 삽입
         http
-                .addFilterBefore(new JWTFilter(jwtUtil, memberRepository), LoginFilter.class);
-        http
-                .addFilterBefore(new CustomLogoutFilter(jwtUtil, refreshRepository), LogoutFilter.class);
+                .addFilterAfter(new JWTFilter(jwtUtil, memberRepository), UsernamePasswordAuthenticationFilter.class);
         http
                 .addFilterAt(
                         new LoginFilter(authenticationManager(authenticationConfiguration), refreshRepository, jwtUtil,
                                 "/login"),
                         UsernamePasswordAuthenticationFilter.class);
-
+        http
+                .addFilterBefore(new CustomLogoutFilter(jwtUtil, refreshRepository), LogoutFilter.class);
         http
                 .logout(logout -> logout.logoutSuccessUrl("/").permitAll());
 
@@ -115,15 +112,3 @@ public class SecurityConfig {
         return http.build();
     }
 }
-
-//private static final String[] PUBLIC_URLS = {
-//        "/health",
-//        "/oauth2/**",
-//        "/login/**",
-//        "/members/join",
-//        "/reissue",
-//        "/v3/**",
-//        "/swagger-ui/**",
-//        "/error",
-//        "/"
-//};
